--- a/package.json
+++ b/package.json
@@ -2,7 +2,13 @@
   "name": "eden-bot",
   "version": "1.0.0",
   "scripts": {
-    "start": "node start.js"
+    "build-ts": "tsc",
+    "lint": "tslint -c tslint.json 'src/**/*.ts'",
+    "postinstall": "npm run build-ts",
+    "start": "npm run serve",
+    "serve": "node dist/server.js",
+    "watch-node": "nodemon dist/server.js",
+    "watch-ts": "tsc -w"
   },
   "dependencies": {
     "@babel/core": "^7.8.6",
@@ -14,7 +20,12 @@
   },
   "description": "",
   "main": "start.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/node": "^13.7.7",
+    "prettier": "^1.19.1",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-plugin-prettier": "^2.1.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/michele-mogul/eden-bot.git"
