--- a/package.json
+++ b/package.json
@@ -3,25 +3,31 @@
   "version": "1.0.0",
   "scripts": {
     "build-ts": "tsc",
+    "build": " npm run build-ts  && npm run copy-static-assets",
     "lint": "tslint -c tslint.json 'src/**/*.ts'",
-    "postinstall": "npm run build-ts",
+    "postinstall": "npm run build",
     "start": "npm run serve",
     "serve": "node dist/server.js",
     "watch-node": "nodemon dist/server.js",
-    "watch-ts": "tsc -w"
+    "watch-ts": "tsc -w",
+    "copy-static-assets": "ts-node copyStaticAssets.ts"
   },
   "dependencies": {
-    "@babel/core": "^7.8.6",
-    "@babel/register": "latest",
-    "@babel/preset-env": "^7.8.6",
     "node-telegram-bot-api": "latest",
     "pureimage": "latest",
-    "select-random-file": "^1.1.0"
+    "typescript": "^3.8.3",
+    "tslint": "^6.0.0",
+    "tsc": "latest",
+    "select-random-file": "^1.1.0",
+    "ts-node": "^8.6.2",
+    "shelljs": "latest"
   },
   "description": "",
   "main": "start.js",
   "devDependencies": {
     "@types/node": "^13.7.7",
+    "@types/node-telegram-bot-api": "^0.40.2",
+    "@types/shelljs": "^0.8.6",
     "prettier": "^1.19.1",
     "tslint-config-prettier": "^1.18.0",
     "tslint-plugin-prettier": "^2.1.0"
