--- a/package.json
+++ b/package.json
@@ -2,14 +2,10 @@
   "name": "eden-bot",
   "version": "1.1.0",
   "scripts": {
-    "build-ts": "tsc",
-    "build": " npm run build-ts  && npm run copy-static-assets",
-    "lint": "tslint -c tslint.json 'src/**/*.ts'",
+    "build": "npm run copy-static-assets",
     "postinstall": "npm run build",
     "start": "npm run serve",
-    "serve": "node dist/server.js",
-    "watch-node": "nodemon dist/server.js",
-    "watch-ts": "tsc -w",
+    "serve": "ts-node src/server.ts",
     "copy-static-assets": "ts-node copyStaticAssets.ts"
   },
   "dependencies": {
@@ -20,9 +16,7 @@
     "select-random-file": "^1.1.0",
     "shelljs": "latest",
     "ts-node": "^8.6.2",
-    "tsc": "latest",
-    "tslint": "^6.0.0",
-    "typescript": "^3.8.3"
+    "typescript": "^4.9.3"
   },
   "description": "",
   "main": "dist/server.js",
@@ -30,9 +24,7 @@
     "@types/node": "^13.7.7",
     "@types/node-telegram-bot-api": "^0.40.2",
     "@types/shelljs": "^0.8.6",
-    "prettier": "^1.19.1",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-plugin-prettier": "^2.1.0"
+    "prettier": "^1.19.1"
   },
   "repository": {
     "type": "git",
