--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,9 @@
     "target": "es6",
     "module": "commonjs",
     "outDir": "dist",
-    "rootDir": "src"
+    "rootDir": "src",
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "allowSyntheticDefaultImports": true
   }
 }
