--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/express": "^4.17.2",
+    "dotenv": "latest",
     "express": "latest",
     "node-telegram-bot-api": "latest",
     "pureimage": "latest",
